<resources>
    <string name="app_name">ERMAndroidApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Details">Details</string>
    <string name="Edit">Edit</string>
    <string name="Delete">Delete</string>
    <string name="ListEmergencyServices">List emergency Services</string>
    <string name="See_Vehicles">See Vehicles</string>
    <string name="viewmap">Location</string>
    <string name="are_you_sure_message">confirm the action</string>
    <string name="remove_emgVehicle_message">vehicle is about to be removed</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="no_message">NO</string>
    <string name="editButton">EDIT</string>
    <string name="addEmgServiceLocation">Location</string>
    <string name="addEmgServiceType">Type</string>
    <string name="registerButton">Register</string>
    <string name="remove_emgService_message">This is going to get deleted</string>
    <string name="addEmgVehicleLon">Longitude:</string>
    <string name="addEmgVehicleLat">Latitude</string>
    <string name="addEmgVehicleLocation">Location:</string>
    <string name="addEmgVehicleType">Type:</string>
    <string name="addEmgVehicleEmgServiceId">Emergency Service Id</string>
    <string name="addEmgVehicleLastMaintenance">Last Maintenance</string>
    <string name="addEmgVehicleOperStatus">Operating Status</string>
    <string name="addEmgVehicleVin">VIN</string>
    <string name="addEmgVehicleModel">Model</string>
    <string name="backButton">Return</string>
    <string name="error">Something went wrong</string>
    <string name="addToFav">Add to Favorites</string>
    <string name="success">Done!</string>
    <string name="ListFavoriteVehicles">List Favorite Vehicles</string>
</resources>