<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EmgVehicleDetailsView">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmgVehicleEmgServiceId" />

        <TextView
            android:id="@+id/emgVehicleEmgServiceId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
             />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmgVehicleModel" />

        <TextView
            android:id="@+id/emgVehicleModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmgVehicleVin" />

        <TextView
            android:id="@+id/emgVehicleVin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmgVehicleType" />

        <TextView
            android:id="@+id/emgVehicleType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmgVehicleOperStatus" />

        <TextView
            android:id="@+id/emgVehicleOperStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmgVehicleLocation" />

        <TextView
            android:id="@+id/emgVehicleLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/addEmgVehicleLon" />

            <TextView
                android:id="@+id/emgVehicleLon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="275dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/addEmgVehicleLat" />

            <TextView
                android:id="@+id/emgVehicleLat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="275dp" />


        </LinearLayout>


        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmgVehicleLastMaintenance" />

        <TextView
            android:id="@+id/emgVehicleLastMaintenance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="returnNav"
            android:text="@string/backButton"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addToFav"
            android:text="@string/addToFav"
            app:layout_constraintBottom_toBottomOf="parent" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>