<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EmgVehicleListView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmgVehicleEmgServiceId" />

        <EditText
            android:id="@+id/emgVehicleAddEmgServiceId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmgVehicleModel" />

        <EditText
            android:id="@+id/emgVehicleAddModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmgVehicleVin" />

        <EditText
            android:id="@+id/emgVehicleAddVin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmgVehicleType" />

        <EditText
            android:id="@+id/emgVehicleAddType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmgVehicleOperStatus" />

        <EditText
            android:id="@+id/emgVehicleAddOperStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addEmgVehicleLocation" />

        <EditText
            android:id="@+id/emgVehicleAddLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/addEmgVehicleLon" />

            <EditText
                android:id="@+id/emgVehicleAddLon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="numberDecimal"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="275dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/addEmgVehicleLat" />

            <EditText
                android:id="@+id/emgVehicleAddLat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="numberDecimal"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="275dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/addEmgVehicleLastMaintenance" />

            <EditText
                android:id="@+id/emgVehicleAddLastMaintenance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:inputType="date"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="275dp" />


        </LinearLayout>


        <Button
            android:id="@+id/emgVehicleAddRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/registerButton" />


    </LinearLayout>

    <Button
        android:id="@+id/btnReturn3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onClick="returnNav"
        android:text="Return"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>